--- a/todolist.html
+++ b/todolist.html
@@ -28,7 +28,7 @@
 
   <script>
     document.getElementById('logoutButton').addEventListener('click', function () {
-      window.location.href = 'login.html';
+      window.location.href = 'index.html';
     });
 
     let completedTasksCount = 0;
